--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <version>1.0.0</version>
     <modules>
         <module>common</module>
+        <module>system</module>
     </modules>
     <name>my-platform</name>
     <packaging>pom</packaging>
@@ -25,7 +26,7 @@
         <druid.version>1.2.6</druid.version>
         <fastjson.version>1.2.76</fastjson.version>
         <mybatis.plus.version>3.4.3</mybatis.plus.version>
-        <iot.lib.package.url>C:\my-platform\lib</iot.lib.package.url>
+        <package.lib>D:\my-platform\lib</package.lib>
         <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -72,6 +73,11 @@
                 <groupId>com.baomidou</groupId>
                 <artifactId>mybatis-plus-boot-starter</artifactId>
                 <version>${mybatis.plus.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>druid</artifactId>
+                <version>${druid.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.alibaba</groupId>
