--- a/common/pom.xml
+++ b/common/pom.xml
@@ -11,6 +11,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>common-core</module>
+        <module>common-web</module>
     </modules>
 
     <artifactId>common</artifactId>
