--- a/gateway/src/main/resources/bootstrap.yml
+++ b/gateway/src/main/resources/bootstrap.yml
@@ -1,15 +1,17 @@
 # Tomcat
 server:
-  port: 9201
+  port: 8085
 
 # Spring
 spring:
   application:
     # 应用名称
-    name: system
+    name: gateway
   profiles:
     # 环境配置
     active: dev
+  main:
+    allow-bean-definition-overriding: true
   cloud:
     nacos:
       discovery:
