--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
     <modules>
         <module>common</module>
         <module>system</module>
+        <module>gateway</module>
     </modules>
     <name>my-platform</name>
     <packaging>pom</packaging>
