--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
         <druid.version>1.2.6</druid.version>
         <fastjson.version>1.2.76</fastjson.version>
         <mybatis.plus.version>3.4.3</mybatis.plus.version>
-        <package.lib>D:\my-platform\lib</package.lib>
+        <package.lib>C:\my-platform\lib</package.lib>
         <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
