--- a/common/common-core/pom.xml
+++ b/common/common-core/pom.xml
@@ -32,6 +32,12 @@
             <artifactId>mybatis-plus-generator</artifactId>
             <version>3.2.0</version>
         </dependency>
+        <!-- 模板引擎,mybatisPlus生成工具需要使用 -->
+        <dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity-engine-core</artifactId>
+            <version>2.0</version>
+        </dependency>
     </dependencies>
 
 </project>
