--- a/common/pom.xml
+++ b/common/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>common-core</module>
         <module>common-web</module>
+        <module>common-cache</module>
     </modules>
 
     <artifactId>common</artifactId>
