--- a/system/pom.xml
+++ b/system/pom.xml
@@ -65,27 +65,6 @@
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-jwt</artifactId>
-            <version>1.0.10.RELEASE</version>
-        </dependency>
-        <!--JWT依赖-->
-        <dependency>
-            <groupId>io.jsonwebtoken</groupId>
-            <artifactId>jjwt</artifactId>
-            <version>0.9.1</version>
-        </dependency>
-        <dependency>
-            <groupId>com.nimbusds</groupId>
-            <artifactId>nimbus-jose-jwt</artifactId>
-            <version>8.16</version>
-        </dependency>
-        <!--只需引入这一个即可：此依赖整合了security、oauth2-->
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-oauth2</artifactId>
-        </dependency>
-        <dependency>
             <groupId>cn.cxnxs</groupId>
             <artifactId>common-web</artifactId>
             <version>1.0.0</version>
@@ -98,6 +77,11 @@
         <dependency>
             <groupId>cn.cxnxs</groupId>
             <artifactId>common-cache</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.cxnxs</groupId>
+            <artifactId>common-api</artifactId>
             <version>1.0.0</version>
         </dependency>
         <dependency>
