--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -49,6 +49,11 @@
         </dependency>
         <dependency>
             <groupId>cn.cxnxs</groupId>
+            <artifactId>common-api</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.cxnxs</groupId>
             <artifactId>common-web</artifactId>
             <version>1.0.0</version>
             <exclusions>
@@ -57,6 +62,11 @@
                     <artifactId>spring-boot-starter-web</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
         </dependency>
     </dependencies>
     <build>
