--- a/oauth-server/src/main/resources/bootstrap.yml
+++ b/oauth-server/src/main/resources/bootstrap.yml
@@ -26,4 +26,4 @@ spring:
         file-extension: yml
         # 共享配置
         shared-configs:
-          - application-${spring.profiles.active}.${spring.cloud.nacos.config.file-extension}
+          - application-common.${spring.cloud.nacos.config.file-extension}
