--- a/system/pom.xml
+++ b/system/pom.xml
@@ -81,13 +81,18 @@
         </dependency>
         <dependency>
             <groupId>cn.cxnxs</groupId>
-            <artifactId>common-api</artifactId>
+            <artifactId>oauth-server-api</artifactId>
             <version>1.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>cn.cxnxs</groupId>
+            <artifactId>system-api</artifactId>
+            <version>1.0.0</version>
         </dependency>
     </dependencies>
     <build>
