--- a/system/pom.xml
+++ b/system/pom.xml
@@ -15,6 +15,7 @@
         <package.url>C:\my-platform\system</package.url>
         <!--启动类目录-->
         <mainClass.url>cn.cxnxs.system.SystemApplication</mainClass.url>
+        <activiti.version>5.22.0</activiti.version>
     </properties>
     <dependencies>
         <dependency>
@@ -93,6 +94,42 @@
             <groupId>cn.cxnxs</groupId>
             <artifactId>system-api</artifactId>
             <version>1.0.0</version>
+        </dependency>
+        <!-- Activiti 启动器 -->
+        <dependency>
+            <groupId>org.activiti</groupId>
+            <artifactId>activiti-spring-boot-starter-basic</artifactId>
+            <version>${activiti.version}</version>
+        </dependency>
+        <!-- Activiti 流程图 -->
+        <dependency>
+            <groupId>org.activiti</groupId>
+            <artifactId>activiti-diagram-rest</artifactId>
+            <version>${activiti.version}</version>
+        </dependency>
+        <!-- Activiti 在线设计 -->
+        <dependency>
+            <groupId>org.activiti</groupId>
+            <artifactId>activiti-modeler</artifactId>
+            <version>${activiti.version}</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>spring-security-config</artifactId>
+                    <groupId>org.springframework.security</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>spring-security-crypto</artifactId>
+                    <groupId>org.springframework.security</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>spring-security-web</artifactId>
+                    <groupId>org.springframework.security</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>spring-security-core</artifactId>
+                    <groupId>org.springframework.security</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
     <build>
