--- a/bookmark/src/main/resources/bootstrap.yml
+++ b/bookmark/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 # Tomcat
 server:
-  port: 9204
+  port: 9203
 
 # Spring
 spring:
@@ -12,7 +12,7 @@ spring:
     active: dev
   cloud:
     nacos:
-      server-addr: 192.168.1.101:8848
+      server-addr: 127.0.0.1:8848
       discovery:
         #命名空间
         namespace: afafa52b-2009-43ff-8709-9945e36b4cc9
@@ -23,4 +23,5 @@ spring:
         file-extension: yml
         # 共享配置
         shared-configs:
-          - application-${spring.profiles.active}.${spring.cloud.nacos.config.file-extension}
+          - application-common.${spring.cloud.nacos.config.file-extension}
+        timeout: 20000
