--- a/gateway/src/main/resources/bootstrap.yml
+++ b/gateway/src/main/resources/bootstrap.yml
@@ -16,12 +16,12 @@ spring:
     nacos:
       discovery:
         # 服务注册地址
-        server-addr: 139.180.192.129:8848
+        server-addr: 127.0.0.1:8848
         #命名空间
         namespace: afafa52b-2009-43ff-8709-9945e36b4cc9
       config:
         # 配置中心地址
-        server-addr: 139.180.192.129:8848
+        server-addr: 127.0.0.1:8848
         #命名空间
         namespace: afafa52b-2009-43ff-8709-9945e36b4cc9
         # 配置文件格式
@@ -29,3 +29,4 @@ spring:
         # 共享配置
         shared-configs:
           - application-common.${spring.cloud.nacos.config.file-extension}
+        timeout: 20000
