添加检测token接口

--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -63,6 +63,12 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>cn.cxnxs</groupId>
+            <artifactId>oauth-server-api</artifactId>
+            <version>1.0.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
