--- a/system/pom.xml
+++ b/system/pom.xml
@@ -96,20 +96,9 @@
             <version>1.0.0</version>
         </dependency>
         <dependency>
-            <groupId>com.squareup.okhttp3</groupId>
-            <artifactId>okhttp</artifactId>
-            <version>4.9.0</version>
-        </dependency>
-        <dependency>
-            <groupId>io.minio</groupId>
-            <artifactId>minio</artifactId>
-            <version>8.4.3</version>
-            <exclusions>
-                <exclusion>
-                    <artifactId>okhttp</artifactId>
-                    <groupId>com.squareup.okhttp3</groupId>
-                </exclusion>
-            </exclusions>
+            <groupId>cn.cxnxs</groupId>
+            <artifactId>common-minio</artifactId>
+            <version>1.0.0</version>
         </dependency>
         <!-- Activiti 启动器 -->
        <!-- <dependency>
