--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -69,6 +69,11 @@
             <version>1.0.0</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-websocket</artifactId>
+            <version>9.0.65</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
