--- a/system/src/main/resources/bootstrap.yml
+++ b/system/src/main/resources/bootstrap.yml
@@ -14,17 +14,17 @@ spring:
     nacos:
       discovery:
         # 服务注册地址
-        server-addr: 127.0.0.1:8848
+        server-addr: 192.168.1.101:8848
         #命名空间
-        namespace: afafa52b-2009-43ff-8709-9945e36b4cc9
+        namespace: d768031b-b66a-4d7c-a58e-b0577dc403c9
       config:
         # 配置中心地址
-        server-addr: 127.0.0.1:8848
+        server-addr: 192.168.1.101:8848
         #命名空间
-        namespace: afafa52b-2009-43ff-8709-9945e36b4cc9
+        namespace: d768031b-b66a-4d7c-a58e-b0577dc403c9
         # 配置文件格式
         file-extension: yml
         # 共享配置
         shared-configs:
-          - application-common.${spring.cloud.nacos.config.file-extension}
-        timeout: 20000
+          - application-${spring.profiles.active}.${spring.cloud.nacos.config.file-extension}
+
