--- a/system/pom.xml
+++ b/system/pom.xml
@@ -115,6 +115,7 @@
         </dependency>
     </dependencies>
     <build>
+        <finalName>app</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
