--- a/bookmark/src/main/resources/bootstrap.yml
+++ b/bookmark/src/main/resources/bootstrap.yml
@@ -16,9 +16,11 @@ spring:
       discovery:
         #命名空间
         namespace: afafa52b-2009-43ff-8709-9945e36b4cc9
+        group: prod
       config:
         #命名空间
         namespace: afafa52b-2009-43ff-8709-9945e36b4cc9
+        group: prod
         # 配置文件格式
         file-extension: yml
         # 共享配置
