--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>gateway</module>
         <module>oauth-server</module>
         <module>bookmark</module>
+        <module>scheduler</module>
     </modules>
     <name>my-platform</name>
     <packaging>pom</packaging>
