--- a/scheduler/pom.xml
+++ b/scheduler/pom.xml
@@ -80,11 +80,6 @@
             <optional>true</optional>
         </dependency>
         <dependency>
-            <groupId>org.jsoup</groupId>
-            <artifactId>jsoup</artifactId>
-            <version>1.13.1</version>
-        </dependency>
-        <dependency>
             <groupId>com.arronlong</groupId>
             <artifactId>httpclientutil</artifactId>
             <version>1.0.4</version>
@@ -98,6 +93,21 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-quartz</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>1.6.1</version>
+        </dependency>
+        <dependency>
+            <groupId>jaxen</groupId>
+            <artifactId>jaxen</artifactId>
+            <version>1.1.4</version>
+        </dependency>
+        <dependency>
+            <groupId>us.codecraft</groupId>
+            <artifactId>xsoup</artifactId>
+            <version>0.2.2</version>
         </dependency>
     </dependencies>
     <build>
