--- a/gateway/src/main/resources/bootstrap.yml
+++ b/gateway/src/main/resources/bootstrap.yml
@@ -19,13 +19,13 @@ spring:
         server-addr: 192.168.1.101:8848
         #命名空间
         namespace: afafa52b-2009-43ff-8709-9945e36b4cc9
-        group: prod
+#        group: prod
       config:
         # 配置中心地址
         server-addr: 192.168.1.101:8848
         #命名空间
         namespace: afafa52b-2009-43ff-8709-9945e36b4cc9
-        group: prod
+        #        group: prod
         # 配置文件格式
         file-extension: yml
         # 共享配置
