--- a/scheduler/src/main/resources/bootstrap.yml
+++ b/scheduler/src/main/resources/bootstrap.yml
@@ -16,9 +16,9 @@ spring:
       discovery:
         #命名空间
         namespace: afafa52b-2009-43ff-8709-9945e36b4cc9
-        #group: prod
+        group: prod
       config:
-        #group: prod
+        group: prod
         #命名空间
         namespace: afafa52b-2009-43ff-8709-9945e36b4cc9
         # 配置文件格式
