--- a/scheduler/pom.xml
+++ b/scheduler/pom.xml
@@ -109,6 +109,11 @@
             <artifactId>xsoup</artifactId>
             <version>0.3.7</version>
         </dependency>
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>2.3.31</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>app</finalName>
@@ -229,4 +234,18 @@
             </plugin>
         </plugins>
     </build>
+
+    <repositories>
+        <repository>
+            <id>aliyun</id>
+            <name>阿里云</name>
+            <url>https://maven.aliyun.com/repository/public</url>
+        </repository>
+        <repository>
+            <id>tencentCloud</id>
+            <name>腾讯云</name>
+            <url>https://mirrors.cloud.tencent.com/nexus/repository/maven-public/</url>
+        </repository>
+    </repositories>
+
 </project>
