电子邮件任务

--- a/scheduler/pom.xml
+++ b/scheduler/pom.xml
@@ -116,8 +116,9 @@
         </dependency>
         <!--邮件发送依赖-->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-mail</artifactId>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.6.2</version>
         </dependency>
         <!--生成rss-->
         <dependency>
